# snowflake-aws-etl

./: .gitignore  AUTHORS.md  pyproject.toml  setup_poetry.sh
src/: __init__.py
src/etl_factory/ai/: market_analyzer.py
src/etl_factory/config/: config_loader.py  local.ini
src/etl_factory/providers/polygon/: hook.py  operator.py
src/etl_factory/providers/reddit/: hook.py  operator.py
src/etl_factory/providers/smtp/: hook.py  operator.py
src/etl_factory/providers/twitter/: hook.py  operator.py
src/etl_factory/providers/youtube/: __init__.py  hook.py
src/etl_factory/utils/: base.py
src/snowflake_azure_etl_tools/config/: config_loader.py  local.ini
src/snowflake_azure_etl_tools/providers/polygon/: hook.py  operator.py
src/snowflake_azure_etl_tools/utils/: base.py
src/snowflake_azure_etl_tools/utils/base/: base.py  base_hook.py  base_operator.py
src/snowflake_azure_etl_tools/utils/hooks/: base.py  polygon.py
src/snowflake_azure_etl_tools/utils/operators/: base.py
