[project]
name = "etl_factory"
version = "0.0.0.dev1"
dependencies = [
  "pandas",
  "numpy",
  "polygon-api-client",
  "praw",
  "tweepy",
  "openai",
  "anthropic"
]

requires-python = ">=3.9"
description = "Test Extract Transform Load pipeline using AWS and Snowflake"
authors = [
  {name = "Vrajesh Patel", email = "patelvrajesh2001@gmail.com"}
]
maintainers = [
  {name = "Vrajesh Patel", email = "patelvrajesh2001@gmail.com"}
]
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
classifiers = [
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

#  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/VrajeshPatel20/snowflake-aws-etl/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/etl_factory"]
#  "polygon==1.15.3",
